--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" type="text/css" href="assets/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="assets/joint.css">
 
-    <script data-main="js/test/AppViewTest" src="js/libs/require/require.js"></script>
+    <script data-main="js/test/main" src="js/libs/require/require.js"></script>
 </head>
 
 <body>
@@ -91,7 +91,7 @@
                                                              role="presentation">save</i> Save</a>
             <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
                                                         role="presentation">cloud_download</i> Download</a>
-            <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
+            <a id="compile" class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
                                                         role="presentation">donut_large</i> Compile</a>
             <a class="mdl-navigation__link" href="doc/index.html"><i
                     class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>
