--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -409,6 +409,13 @@
                         </div>
                     </script>
 
+                    <script type="text/template" id="class.HxComment">
+                        <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label" id="comm">
+                            <label class="mdl-textfield__label" for="classname">Commento</label>
+                            <input class="edit mdl-textfield__input" value="<%= comment %>" name="comment" id="comment">
+                        </div>
+                    </script>
+
                     <script type="text/template" id="uml.ActivityDiagramElement">
                         <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
                         >
