--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -89,9 +89,7 @@
                 role="presentation">open_in_browser</i> Open</label>
             <a id="savefile" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons"
                                                              role="presentation">save</i> Save</a>
-            <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
-                                                        role="presentation">cloud_download</i> Download</a>
-            <a id="compile" class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
+            <a id="generate" class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
                                                         role="presentation">donut_large</i> Compile</a>
             <a class="mdl-navigation__link" href="doc/index.html"><i
                     class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>
@@ -138,14 +136,14 @@
                             <input class="edit mdl-textfield__input" value="<%= name %>" name="name" id="classname">
                         </div>
                         <div class="prop_inputs" id="abstract">
-                            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-1">
+                            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
                                 <input type="checkbox" name="abstract" class="mdl-checkbox__input edit" <%
                                 if(abstract=="true"){ %>checked <% } %>>
                                 <span class="mdl-checkbox__label">Astratta</span>
                             </label>
                         </div>
                         <div class="prop_inputs" id="static">
-                            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-1">
+                            <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
                                 <input type="checkbox" name="static" class="mdl-checkbox__input edit" <%
                                 if(static=="true"){ %>checked <% } %>>
                                 <span class="mdl-checkbox__label">Static</span>
