--- a/src/main/webapp/docs.html
+++ b/src/main/webapp/docs.html
@@ -25,15 +25,11 @@
 
     <!--<link rel="shortcut icon" href="static/images/favicon.png">-->
 
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="stylesheet" type="text/css" href="assets/jquery-ui.css">
-    <link rel="stylesheet" type="text/css" href="assets/joint.css">
-
-    <script data-main="js/main" src="js/libs/require/require.js"></script>
 </head>
 
 <body>
@@ -65,19 +61,6 @@
     <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
             <img src="images/user.jpg" class="demo-avatar">
-            <!--<div class="demo-avatar-dropdown">
-              <span>hello@example.com</span>
-              <div class="mdl-layout-spacer"></div>
-              <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                <i class="material-icons" role="presentation">arrow_drop_down</i>
-                <span class="visuallyhidden">Accounts</span>
-              </button>
-              <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-                <li class="mdl-menu__item">hello@example.com</li>
-                <li class="mdl-menu__item">info@example.com</li>
-                <li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
-              </ul>
-            </div>-->
         </header>
         <nav id="navbar" class="mdl-navigation mdl-color--blue-grey-800">
             <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i> Home</a>
@@ -93,49 +76,12 @@
 
 
     <main class="mdl-color--grey-100 main">
-        <div class=" demo-content">
-            <div class="components">
-                <div class="mdl-shadow--2dp comp">
-                    <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
-                        <h2 class="mdl-card__title-text mdl-color-text--white">Elements</h2>
-                    </div>
-                    <div id="components" class="mdl-card__actions mdl-card--border">
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">
-                            Nuova classe
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div id="paper" class="demo-graph mdl-shadow--2dp "></div>
-
-
-            <div class="demo-cards ">
-                <div class="mdl-shadow--2dp prop">
-                    <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
-                        <h2 class="mdl-card__title-text mdl-color-text--white">Properties</h2>
-                    </div>
-                    <div id="details" class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                        <!--<input class="mdl-textfield__input" type="text" id="classname">
-                        <label class="mdl-textfield__label" for="classname">Nome classe</label>-->
-                    </div>
-                </div>
-            </div>
-            <button id="switchtoclass" value="class"
-                    class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color-text--white">Torna
-                al diagramma delle classi
-            </button>
-        </div>
+        <p>Documentation:</p>
+        <ul>
+            <li><a href="doc/index.html">Front end</a></li>
+            <li><a href="../../../target/site/index.html">Back end</a></li>
+        </ul>
     </main>
-
-
-    <!--<div id="content">-->
-    <!--<div id="newcell"></div>-->
-    <!--<div id="paper"></div>-->
-    <!--<div id="details"></div>-->
-    <!--<button id="switch">switcha</button>-->
-    <!--<button id="add">salva</button>-->
-    <!--<input type="file" id="files" name="files[]"/>-->
-    <!--</div>-->
 
 </div>
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
