--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -93,7 +93,7 @@
                                                         role="presentation">cloud_download</i> Download</a>
             <a id="compile" class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
                                                         role="presentation">donut_large</i> Compile</a>
-            <a class="mdl-navigation__link" href="doc/index.html"><i
+            <a class="mdl-navigation__link" href="docs.html"><i
                     class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>
                 Documentation</a>
             <div class="mdl-layout-spacer"></div>
