--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="stylesheet" type="text/css" href="assets/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="assets/jstree.css">
     <link rel="stylesheet" type="text/css" href="assets/joint.css">
 
     <script data-main="js/main" src="js/libs/require/require.js"></script>
@@ -108,6 +109,7 @@
 
 
             <div class="demo-cards ">
+                <div id="classtree"></div>
                 <div class="mdl-shadow--2dp prop">
                     <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
                         <h2 class="mdl-card__title-text mdl-color-text--white">Properties</h2>
