--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -95,21 +95,28 @@
 
     <main class="mdl-color--grey-100 main">
         <div class=" demo-content">
-            <div class="components">
-                <div class="mdl-shadow--2dp comp">
+            <div class="components ">
+
+                <div class="mdl-shadow--2dp comp mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
                     <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
                         <h2 class="mdl-card__title-text mdl-color-text--white">Elements</h2>
                     </div>
-                    <div id="components" class="mdl-card__actions mdl-card--border">
+                    <div class="mdl-tabs__tab-bar">
+                        <a href="#components" class="mdl-tabs__tab is-active">Elements</a>
+                        <a href="#classtree" class="mdl-tabs__tab">Treeview</a>
+
+                    </div>
+                    <div id="components" class="mdl-tabs__panel is-active mdl-card__actions mdl-card--border">
                         
                     </div>
+                    <div id="classtree" class="mdl-tabs__panel"></div>
                 </div>
             </div>
             <div id="paper" class="demo-graph mdl-shadow--2dp "></div>
 
 
             <div class="demo-cards ">
-                <div id="classtree"></div>
+
                 <div class="mdl-shadow--2dp prop">
                     <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
                         <h2 class="mdl-card__title-text mdl-color-text--white">Properties</h2>
