cancellazione celle tramite pulsante,spostati controlli panzomm,sistemata association,fixate frecce multiple

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="mdl-tabs__tab-bar">
                         <a href="#components" class="mdl-tabs__tab is-active">Elements</a>
-                        <a href="#classtree" class="mdl-tabs__tab">ClassTree</a>
+                        <a id="classtreetab" href="#classtree" class="mdl-tabs__tab">ClassTree</a>
 
                     </div>
                     <div id="components" class="mdl-tabs__panel is-active mdl-card__actions mdl-card--border">
