--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -43,22 +43,14 @@
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">SWEDesigner</span>
             <div class="mdl-layout-spacer"></div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-                <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
-                    <i class="material-icons">search</i>
-                </label>
-                <div class="mdl-textfield__expandable-holder">
-                    <input class="mdl-textfield__input" type="text" id="search">
-                    <label class="mdl-textfield__label" for="search">Enter your query...</label>
-                </div>
-            </div>
+
             <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
                 <i class="material-icons">more_vert</i>
             </button>
-            <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right">
-                <li class="mdl-menu__item">About</li>
-                <li class="mdl-menu__item">Contact</li>
-                <li class="mdl-menu__item">Legal information</li>
+            <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
+                <li class="mdl-menu__item">Theme1</li>
+                <li class="mdl-menu__item">Theme2</li>
+                <li class="mdl-menu__item">Theme Dark</li>
             </ul>
         </div>
     </header>
@@ -81,14 +73,13 @@
             </div>-->
         </header>
         <nav id="navbar" class="mdl-navigation mdl-color--blue-grey-800">
-            <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i> Home</a>
-            <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">create</i> New</a>
-            <input type="file" id="files" name="files[]"/><label class=" upload mdl-navigation__link" for="files"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">open_in_browser</i> Open</label>
+            <a id="newproj" class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">create</i> New</a>
+            <input type="file" id="files" accept=".json" name="files[]"/><label class=" upload mdl-navigation__link" for="files"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">open_in_browser</i> Open</label>
             <a id="savefile" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">save</i> Save</a>
-            <a id="generate" class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">donut_large</i> Compile</a>
+            <a id="generate" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">donut_large</i> Compile</a>
             <a class="mdl-navigation__link" href="./docs/index.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i> Documentation</a>
             <div class="mdl-layout-spacer"></div>
-            <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i> <span class="visuallyhidden">Help</span></a>
+
         </nav>
     </div>
 
@@ -102,7 +93,7 @@
                         <h2 class="mdl-card__title-text mdl-color-text--white">Elements</h2>
                     </div>
                     <div class="mdl-tabs__tab-bar">
-                        <a href="#components" class="mdl-tabs__tab is-active">Elements</a>
+                        <a id="elementstab" href="#components" class="mdl-tabs__tab is-active">Elements</a>
                         <a id="classtreetab" href="#classtree" class="mdl-tabs__tab">ClassTree</a>
 
                     </div>
