--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -31,13 +31,14 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="stylesheet" type="text/css" href="assets/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="assets/jstree.css">
     <link rel="stylesheet" type="text/css" href="assets/joint.css">
 
     <script data-main="js/test" src="js/libs/require/require.js"></script>
 </head>
 
 <body>
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
+<div id="all" class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">SWEDesigner</span>
