--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
             <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
                 <i class="material-icons">more_vert</i>
             </button>
-            <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
+            <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right">
                 <li class="mdl-menu__item">Theme1</li>
                 <li class="mdl-menu__item">Theme2</li>
                 <li class="mdl-menu__item">Theme Dark</li>
@@ -57,7 +57,7 @@
 
     <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
-            <img src="images/user.jpg" class="demo-avatar">
+            <img src="images/user.jpg" class="demo-avatar" alt="user icon">
             <!--<div class="demo-avatar-dropdown">
               <span>hello@example.com</span>
               <div class="mdl-layout-spacer"></div>
