finite icone anche per activity

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -119,8 +119,7 @@
                 </div>
             </div>
             <button id="switchtoclass" value="class"
-                    class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color-text--white">Torna
-                al diagramma delle classi
+                    class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color-text--white">Return to class diagram
             </button>
         </div>
     </main>
