--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@
           href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
-    <link rel="stylesheet" id="pagetheme" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" id="pagetheme" type="text/css" href="assets/style2.css">
     <link rel="stylesheet" type="text/css" href="assets/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="assets/jstree.css">
     <link rel="stylesheet" type="text/css" href="assets/joint.css">
