--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,11 +45,11 @@
             <span class="mdl-layout-title">SWEDesigner</span>
             <div class="mdl-layout-spacer space1"></div>
             <nav class="mdl-navigation topnav">
-                <a class="mdl-navigation__link newproj"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">create</i></a>
-                <input type="file" class="files" id="files2" accept=".json" name="files[]"/><label class=" upload mdl-navigation__link" for="files2"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">open_in_browser</i> Open</label>
-                <a class="mdl-navigation__link savefile"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">save</i></a>
-                <a class="mdl-navigation__link generate" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">donut_large</i></a>
-                <a class="mdl-navigation__link" target="_blank" href="./docs/index.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i></a>
+                <a class="mdl-navigation__link newproj" title="Create" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">create</i> Create</a>
+                <input type="file" title="Open" class="files" id="files2" accept=".json" name="files[]"/><label class=" upload mdl-navigation__link" for="files2"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">open_in_browser</i> Open</label>
+                <a class="mdl-navigation__link savefile" title="Save" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">save</i> Save</a>
+                <a class="mdl-navigation__link generate" title="Generate" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">donut_large</i> Generate</a>
+                <a class="mdl-navigation__link" title="Docuementation" target="_blank" href="./docs/index.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i> Documentation</a>
             </nav>
             <div class="mdl-layout-spacer space2"></div>
             <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
