--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,8 +47,8 @@
             <nav class="mdl-navigation topnav">
                 <a class="mdl-navigation__link newproj" title="Create" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">create</i> Create</a>
                 <input type="file" title="Open" class="files" id="files2" accept=".json" name="files[]"/><label class=" upload mdl-navigation__link" for="files2"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">open_in_browser</i> Open</label>
-                <a class="mdl-navigation__link savefile" title="Save" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">save</i> Save</a>
-                <a class="mdl-navigation__link generate" title="Generate" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">donut_large</i> Generate</a>
+                <a class="mdl-navigation__link savefile" title="Save" ><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">save</i> Save</a>
+                <a class="mdl-navigation__link generate" title="Generate" ><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">donut_large</i> Generate</a>
                 <a class="mdl-navigation__link" title="Docuementation" target="_blank" href="./docs/index.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i> Documentation</a>
             </nav>
             <div class="mdl-layout-spacer space2"></div>
@@ -80,7 +80,7 @@
             </div>-->
         </header>
         <nav id="navbar" class="mdl-navigation mdl-color--blue-grey-800">
-            <a id="newproj" class="mdl-navigation__link newproj" href="#"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">create</i> New</a>
+            <a id="newproj" class="mdl-navigation__link newproj" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">create</i> New</a>
             <input type="file" class="files" id="files" accept=".json" name="files[]"/><label class=" upload mdl-navigation__link" for="files"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">open_in_browser</i> Open</label>
             <a id="savefile" class="mdl-navigation__link savefile"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">save</i> Save</a>
             <a id="generate" class="mdl-navigation__link generate"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">donut_large</i> Compile</a>
